# eos-Unity

./: README.md  build.sh
eosUnity/Assets/Plugins/eosUnityPlugin/: FaceTextureProcessor.cs  eos.cs
eosUnity/Assets/Prefabs/: BlendshapeModifierSetting.prefab  ValueSlider.prefab
eosUnity/Assets/Scenes/: eosTest.unity
eosUnity/Assets/Scripts/: AudioInputHandler.cs  BlendshapeSettings.cs  FaceMeshHandler.cs  WebCamInterface.cs  camScript.cs
eosUnity/Assets/StreamingAssets/share/: custom_expression_blendshapes_3448.txt
eosUnity/ProjectSettings/: ProjectSettings.asset
eosUnityPlugin/: CMakeLists.txt  build.sh  library.cpp  test.cpp
eosUnityPlugin/modified/: Blendshape.hpp  blendshape_fitting.hpp
generate_blendshape/: README.txt  obj_to_blendshape.py
